feat(search): support sorting on multiple fields